@@ -2,6 +2,7 @@
  * Fixed a problem with lsl.sim.beam.beam_response/mueller_matrix when scalar azimuth/altitude are provided
  * Fixed a problem with lsl.sim.beam.beam_response/mueller_matrix returning NaNa for 'empirical' and 'llfss'
  * Updated FrameTimestamp.__float__ to strictly return a float
+ * Fixed a timestamp problem in lsl.reader.vdif related to tracking leap seconds from the reference epoch
 
 3.0.0
  * Switch to the GNU scientific library for internal Bessel functions
